drawing boxes on canvas

--- a/app/views/waldo/index.html.erb
+++ b/app/views/waldo/index.html.erb
@@ -1,3 +1,5 @@
 <div id="waldo">
-  <%= image_tag("ww") %>
+  <canvas id="canvas" width="1920" height="1080">
+    <%= image_tag("ww") %>
+  </canvas>
 </div>
