--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -6,3 +6,17 @@
     height: 100%;
   }
 }
+
+.guess {
+  position: absolute;
+  border: 5px solid cyan;
+
+  form {
+    padding-bottom: 30px;
+  }
+
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
