--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -20,3 +20,11 @@
     margin-bottom: 0;
   }
 }
+
+#countdown {
+  position: absolute;
+  top: 150px;
+  left: 350px;
+  font-size: 36px;
+  color: lightgreen;
+}
