--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -28,3 +28,13 @@
   font-size: 36px;
   color: lightgreen;
 }
+
+#gameover {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border: 5px solid magenta;
+  background-color: white;
+}
