--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -1,2 +1,2 @@
 $('.guess-box').remove();
-$(".playing-field-wrapper").append("<%= escape_javascript(render :partial => 'victory', :locals => { :game => @game } ) %>")
+$("#waldo").append("<%= escape_javascript(render :partial => 'gameover', :locals => { :game => @game } ) %>")
