done for night, still need to pass score to game over partial

--- a/app/views/games/_gameover.html.erb
+++ b/app/views/games/_gameover.html.erb
@@ -1,3 +1,5 @@
 <div id="gameover">
-  <h1>RICH HOMIE QUAN</h1>
+  <h1>THAT'S ALL FOLKS</h1>
+  <h4>Let's see how you did...</h4>
+  <p>Your score was: </p>
 </div>
