--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -1,2 +1,6 @@
 $('.guess-box').remove();
+$('.guess').remove();
+
+$("#countdown").remove();
+
 $("#waldo").append("<%= escape_javascript(render :partial => 'gameover', :locals => { :game => @game } ) %>")
